fixed css styling for the content of the popup page to have all children display: none; until they have visible class

--- a/src/app/components/popup/popup.scss
+++ b/src/app/components/popup/popup.scss
@@ -32,14 +32,14 @@
 		background-color: rgba(0, 0, 0, 0.15);
 		padding: 40px;
 
-		.instructions {
+		> * {
 			display: none;
 
 			&.visible {
 				display: block;
 			}
 		}
-		
+
 		ul {
 			margin: 0;
 			li {
